series widget incoming

--- a/partials/thisseries-widget.hbs
+++ b/partials/thisseries-widget.hbs
@@ -15,7 +15,7 @@ $(document).ready(function() {
     var i;
     for (i = 0; i < tags.length; i++){
       var tag = tags[i];
-      console.log('tag = ' + tag);
+      console.log('tag = ' + tag['slug']);
       if (tag[slug][0] == "#") {
         console.log('series = '+ tag);
       }
