--- a/partials/thisseries-widget.hbs
+++ b/partials/thisseries-widget.hbs
@@ -16,7 +16,7 @@ $(document).ready(function() {
     for (i = 0; i < tags.length; i++){
       var tag = tags[i];
       console.log('tag = ' + tag['slug']);
-      if (tag[slug][0] == "#") {
+      if (tag['slug'][0] == "#") {
         console.log('series = '+ tag);
       }
     }
