--- a/partials/thisseries-widget.hbs
+++ b/partials/thisseries-widget.hbs
@@ -3,23 +3,23 @@ $(document).ready(function() {
 
   function current_page() {
     var sPath = String(document.location.pathname);
-    var slug = sPath.split('/')[1]
+    var slug = sPath.split('/')[1];
     return slug;
   }
 
-  var endpoint = 'https://hackersandslackers.com/ghost/api/v2/content/posts/slug/' + current_page() + '?key=b1a7c274fc24aa798ec464497b&include=tags'
+  var endpoint = 'https://hackersandslackers.com/ghost/api/v2/content/posts/slug/' + current_page() + '?key=b1a7c274fc24aa798ec464497b&include=tags';
 
 
   function create_list_object(){
-    $('.post-content').prepend('<div id="seriesposts"><ul></ul></div>');
+    $('.post-content').prepend('<div id="seriesposts"><ol></ol></div>');
   }
 
   function populate_series_list(post){
     console.log("post['url'] = " + post['url']);
     console.log("post['title'] = " + post['title']);
     console.log("post['created'] = " + post['created']);
-    $('#seriesposts').append('<h5>' + post['seriestitle'] + '</h5>';)
-    $('#seriesposts ul').append('<li><a href="' + post['url'] + '">' + post['title'] + '</a></li>')
+    $('#seriesposts').append('<h5>' + post['seriestitle'] + '</h5>';
+    $('#seriesposts ul').append('<li><a href="' + post['url'] + '">' + post['title'] + '</a></li>');
   }
 
   function posts_in_series(series){
