series widget incoming

--- a/partials/thisseries-widget.hbs
+++ b/partials/thisseries-widget.hbs
@@ -18,7 +18,7 @@ $(document).ready(function() {
     console.log("post['url'] = " + post['url']);
     console.log("post['title'] = " + post['title']);
     console.log("post['created'] = " + post['created']);
-    $('#seriesposts').append('<h5>' + post['seriestitle'] + '</h5>';
+    $('#seriesposts').append('<h5>' + post['seriestitle'] + '</h5>');
     $('#seriesposts ul').append('<li><a href="' + post['url'] + '">' + post['title'] + '</a></li>');
   }
 
