--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -29,6 +29,7 @@
 @import 'posts/table.less';
 @import 'posts/galleries.less';
 @import 'posts/article-preview.less';
+@import 'posts/serieswidget.less';
 
 /* Page Styles */
 @import 'pages/page.less';
