--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -810,6 +810,14 @@
 			}
 		}
 
+		ol {
+			list-style-type: upper-roman !important;
+
+			li {
+				list-style-type: upper-roman !important;
+			}
+		}
+
 		.kg-embed-card {
 			margin: 20px auto;
 			background: #fafafa;
