--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -1,9 +1,14 @@
 #seriesposts {
-  background: #dbe7ec;
-  padding: 10px 0 1px;
   margin-bottom: 20px;
+  padding: 20px 20px 1px;
+  background: #dbe7ec;
 
-  li a {
-    color: #518899;
+  h5 {
+    border-bottom: 1px solid #a8c0ce;
+    padding-bottom: 10px;
   }
+
+    li a {
+      color: #518899;
+    }
   }
