series widget incoming

--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -447,11 +447,7 @@
 						display: none;
 					}
 				}
-				/*&.date {
-					@media(max-width: 600px) {
-						display:none;
-					}
-				}*/
+
 				&.mobile {
 					display: none;
 					@media(max-width: 600px) {
@@ -813,7 +809,7 @@
 		ol {
 			list-style-type: upper-roman !important;
 
-			li {
+			li::before {
 				list-style-type: upper-roman !important;
 			}
 		}
