--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -4,11 +4,19 @@
   background: #dbe7ec;
 
   h5 {
-    border-bottom: 1px solid #a8c0ce;
+    border-bottom: 1px solid #345e77 !important;
     padding-bottom: 10px;
   }
 
-    li a {
+  ol {
+    list-style-type: upper-roman !important;
+
+    li {
+      margin-bottom: 10px;
+
+    a {
       color: #518899;
     }
   }
+  }
+}
