--- a/partials/thisseries-widget.hbs
+++ b/partials/thisseries-widget.hbs
@@ -18,7 +18,7 @@ $(document).ready(function() {
     console.log("post['url'] = " + post['url']);
     console.log("post['title'] = " + post['title']);
     console.log("post['created'] = " + post['created']);
-    $('#seriesposts h5').html(post['seriesname'].replace('/', ''));
+    $('#seriesposts h5').html(post['seriesname'].replace('#', ''));
     $('#seriesposts ol').append('<li><a href="' + post['url'] + '">' + post['title'] + '</a></li>');
   }
 
@@ -53,7 +53,7 @@ $(document).ready(function() {
       var tag = tags[i];
       if (tag['visibility'] == "internal") {
         var series = tag['slug'];
-        var seriesname = tag['name'];
+        var seriesname = tag['meta_title'];
         create_list_object();
         posts_in_series(series, seriesname);
       }
