--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -2,10 +2,12 @@
   margin-bottom: 20px;
   padding: 20px 20px 1px;
   background: #dbe7ec;
+  border-radius: 3px;
 
   h5 {
-    border-bottom: 1px solid #345e77 !important;
+    border-bottom: 1px solid #adcacf !important;
     padding-bottom: 10px;
+    color: #518898 !important;
   }
 
   ol {
@@ -14,9 +16,28 @@
     li {
       margin-bottom: 10px;
 
-    a {
-      color: #518899;
+      a {
+        color: #518899;
+      }
     }
   }
+
+  .currentPost {
+    &::before {
+    -webkit-font-feature-settings: normal;
+    -webkit-font-smoothing: antialiased;
+    display: inline-block;
+    margin-right: 10px;
+    padding-left: 0;
+    color: #518898;
+    font-family: "Font Awesome 5 Pro";
+    font-feature-settings: normal;
+    font-size: 13px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 600;
+    text-rendering: auto;
+    content: "\f101";
+    }
   }
 }
