series widget incoming

--- a/partials/thisseries-widget.hbs
+++ b/partials/thisseries-widget.hbs
@@ -33,6 +33,7 @@ $(document).ready(function() {
         var post = posts[i];
         var title = post['title'];
         var url = 'https://hackersandslackers.com/' + post['slug'];
+        var slug = post['slug'];
         var created = post['created_at'];
         var post_dict = {'seriesname': seriesname,
                         'title': title,
