series widget incoming

--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -8,6 +8,7 @@
     border-bottom: 1px solid #adcacf !important;
     padding-bottom: 10px;
     color: #518898 !important;
+    font-family: 'TTNorms-Medium',serif;
   }
 
   ol {
@@ -15,6 +16,7 @@
 
     li {
       margin-bottom: 10px;
+      opacity: .6;
 
       a {
         color: #518899;
@@ -23,6 +25,9 @@
   }
 
   .currentPost {
+    opacity: 1;
+    margin-left: 0;
+    
     &::before {
     -webkit-font-feature-settings: normal;
     -webkit-font-smoothing: antialiased;
