series widget incoming

--- a/partials/thisseries-widget.hbs
+++ b/partials/thisseries-widget.hbs
@@ -12,7 +12,7 @@ $(document).ready(function() {
 
 
   function create_list_object(){
-    $('.post-content').prepend('<div id="seriesposts"><h5></h5><ol></ol></div>');
+    $('.post-content').prepend('<div id="seriesposts"><h5></h5><ol reversed></ol></div>');
   }
 
   function populate_series_list(post){
