--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -22,6 +22,7 @@
       &::before{
         content: "Post " counter(step-counter, upper-roman) ". ";
         font-family: 'TTNorms-Medium';
+        color: #518899;
       }
 
       a {
@@ -35,20 +36,7 @@
     margin-left: 0;
 
     &::before {
-    -webkit-font-feature-settings: normal;
-    -webkit-font-smoothing: antialiased;
-    display: inline-block;
-    margin-right: 10px;
-    padding-left: 0;
-    color: #518898;
-    font-family: "Font Awesome 5 Pro";
-    font-feature-settings: normal;
-    font-size: 13px;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 600;
-    text-rendering: auto;
-    content: "\f101";
+      margin-left:0;
     }
   }
 }
