--- a/partials/thisseries-widget.hbs
+++ b/partials/thisseries-widget.hbs
@@ -12,7 +12,7 @@ $(document).ready(function() {
   var endpoint = 'https://hackersandslackers.com/ghost/api/v2/content/posts/slug/' + postslug + '?key=b1a7c274fc24aa798ec464497b&include=tags';
 
 
-  function reverse_list() {
+/*  function reverse_list() {
 
         // run the code on each ordered list with a 'reversed' attribute.
         var myLists = $('ol[reversed]'),
@@ -59,7 +59,7 @@ $(document).ready(function() {
                 currCount = currCount - 1;
             });
         });
-    }
+    }*/
 
   function create_list_object(){
     $('.post-content').prepend('<div id="seriesposts"><h5></h5><ol reversed></ol></div>');
@@ -97,7 +97,6 @@ $(document).ready(function() {
       populate_series_list(post_dict);
       }
       $('.' + postslug).addClass('currentPost');
-      reverse_list();
     });
   }
 
