series widget incoming

--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -21,12 +21,12 @@
       margin-bottom: 10px;
       opacity: .6;
       counter-increment: step-counter;
+      color: #518899;
 
       &::before{
         counter-increment: step-counter;
         content: "Post " counter(step-counter, upper-roman) ". ";
-        font-family: 'TTNorms-Bold
-        ';
+        font-family: 'TTNorms-Bold';
         color: #518899;
       }
 
