--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -20,11 +20,10 @@
     li {
       margin-bottom: 10px;
       opacity: .6;
-      counter-increment: step-counter;
+      counter-increment: step-counter -1;
       color: #518899;
 
       &::before{
-        counter-increment: step-counter;
         content: "Post " counter(step-counter, upper-roman) ". ";
         font-family: 'TTNorms-Bold';
         color: #518899;
