--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -1,14 +1,15 @@
 #seriesposts {
   margin-bottom: 20px;
   padding: 20px 20px 1px;
-  background: #dbe7ec;
+  background: #f7f9fa;
   border-radius: 3px;
 
   h5 {
     border-bottom: 1px solid #adcacf !important;
     padding-bottom: 10px;
+    font-size: 1.3em;
     color: #518898 !important;
-    font-family: 'TTNorms-Medium',serif;
+    font-family: 'TTNorms-Regular',serif;
   }
 
   ol {
@@ -22,10 +23,11 @@
       opacity: .6;
       counter-increment: step-counter -1;
       color: #518899;
+      font-family: 'TTNorms-Regular';
 
       &::before{
         content: "Post " counter(step-counter, upper-roman) ". ";
-        font-family: 'TTNorms-Bold';
+        font-family: 'TTNorms-Medium';
         color: #518899;
       }
 
@@ -38,9 +40,11 @@
   .currentPost {
     opacity: 1;
     margin-left: 0;
+    font-family: 'TTNorms-Medium';
 
     &::before {
       margin-left:0;
+      font-family: 'TTNorms-Bold';
     }
   }
 }
