--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -3,6 +3,10 @@
   padding: 20px 20px 1px;
   background: #f7f9fa;
   border-radius: 3px;
+  @media(max-width: 600px) {
+
+    padding: 15px 20px 10px;
+  }
 
   h5 {
     border-bottom: 1px solid #adcacf !important;
@@ -10,6 +14,11 @@
     font-size: 1.3em;
     color: #518898 !important;
     font-family: 'TTNorms-Regular',serif;
+
+    @media(max-width: 600px) {
+      margin-top: 5px;
+      font-size: 1.1em;
+    }
   }
 
   ol {
@@ -18,14 +27,24 @@
     margin-bottom: 30px;
     margin-left: 20px;
 
+    @media(max-width: 600px) {
+      margin: 20px 0 10px;
+    }
+
     li {
       margin-bottom: 10px;
-      opacity: .6;
+      opacity: 0.6;
       counter-increment: step-counter -1;
       color: #518899;
       font-family: 'TTNorms-Regular';
+      @media(max-width: 600px) {
+        margin-left: 10px;
+        font-size: 0.9em;
+        line-height: 1.3;
+        margin-bottom: 15px;
+      }
 
-      &::before{
+      &::before {
         content: "Post " counter(step-counter, upper-roman) ". ";
         font-family: 'TTNorms-Medium';
         color: #518899;
@@ -43,7 +62,7 @@
     font-family: 'TTNorms-Medium';
 
     &::before {
-      margin-left:0;
+      margin-left: 0;
       font-family: 'TTNorms-Bold';
     }
   }
