--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -13,7 +13,7 @@
     padding-bottom: 10px;
     font-size: 1.3em;
     color: #518898 !important;
-    font-family: 'TTNorms-Regular',serif;
+    font-family: 'TTNorms-Medium',serif;
 
     @media(max-width: 600px) {
       margin-top: 5px;
@@ -38,16 +38,21 @@
       color: #518899;
       font-family: 'TTNorms-Regular';
       @media(max-width: 600px) {
-        margin-left: 10px;
         font-size: 0.9em;
         line-height: 1.3;
         margin-bottom: 15px;
+            display: flex;
       }
 
       &::before {
         content: "Post " counter(step-counter, upper-roman) ". ";
         font-family: 'TTNorms-Medium';
         color: #518899;
+
+        @media(max-width: 600px) {
+          min-width: 60px;
+        margin-right: 10px;
+        }
       }
 
       a {
