--- a/default.hbs
+++ b/default.hbs
@@ -26,6 +26,10 @@
   {{ghost_head}}
 </head>
 <body class="{{body_class}}">
+	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N8VFCPW"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
 	{{! insert header partial}}
 	{{> newheader}}
 	{{{body}}}
