link preview fixes

--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -48,6 +48,7 @@
 			@media(max-width: 600px) {
 				font-size: 0.9em;
 				line-height: 1.6em;
+				margin-bottom: 15px;
 				display: none;
 			}
 
