--- a/partials/mixpanel.hbs
+++ b/partials/mixpanel.hbs
@@ -3,10 +3,8 @@
 for(h=0;h<l.length;h++)c(e,l[h]);var f="set set_once union unset remove delete".split(" ");e.get_group=function(){function a(c){b[c]=function(){call2_args=arguments;call2=[c].concat(Array.prototype.slice.call(call2_args,0));e.push([d,call2])}}for(var b={},d=["get_group"].concat(Array.prototype.slice.call(arguments,0)),c=0;c<f.length;c++)a(f[c]);return b};a._i.push([b,d,g])};a.__SV=1.2;b=c.createElement("script");b.type="text/javascript";b.async=!0;b.src="undefined"!==typeof MIXPANEL_CUSTOM_LIB_URL?
 MIXPANEL_CUSTOM_LIB_URL:"file:"===c.location.protocol&&"//cdn4.mxpnl.com/libs/mixpanel-2-latest.min.js".match(/^\/\//)?"https://cdn4.mxpnl.com/libs/mixpanel-2-latest.min.js":"//cdn4.mxpnl.com/libs/mixpanel-2-latest.min.js";d=c.getElementsByTagName("script")[0];d.parentNode.insertBefore(b,d)}})(document,window.mixpanel||[]);
 mixpanel.init("df373ec075c96a75fd4015e3beff4e59");
-
-
-
-
+</script>
+<script type="text/javascript">
 mixpanel.init("df373ec075c96a75fd4015e3beff4e59", {opt_out_tracking_by_default: false});
     mixpanel.opt_in_tracking;
     mixpanel.track("Page Name");
@@ -35,4 +33,6 @@ mixpanel.init("df373ec075c96a75fd4015e3beff4e59", {opt_out_tracking_by_default: 
         "referrer": document.referrer
     });
 
-    </script><!-- end Mixpanel -->
+    mixpanel.track_forms('#sidebar-form', 'Subscribed', {'email': });
+</script>
+    <!-- end Mixpanel -->
