--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -22,7 +22,7 @@
 	{{else}}
 		{{> widget-recentpost}}
 	{{/is}}
-	{{^is "page,author"}}
+	{{#is "home,author"}}
 		{{> widget-twitter}}
 	{{/is}}
 	{{!-- {{> widget-google-plus}} --}}
