--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -61,9 +61,9 @@ blockquote .language-python {
     display: inline;
     overflow-y: visible ;
     width: fit-content;
-    background: rgba(183, 192, 237, 0.30196078);
+    background: rgba(183, 192, 237, 0.18);
     color: #3297b5;
-    padding: 3px 6px;
+    padding: 4px 6px;
     border-radius: 2px;
     font-weight: 600;
     font-size: .8em;
