--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -104,9 +104,9 @@
 			margin: 10px 60px 40px;
 		}
 		@media(max-width: 600px) {
-			font-weight: 300;
+			font-family: TTNorms-Regular;
 			font-size: 1.1em;
-			font-family: TTNorms-Bold;
+			font-weight: 600;
 			max-width: 95%;
 			margin: 0 25px;
 		}
@@ -806,13 +806,7 @@
 			}
 		}
 
-		ol {
-			list-style-type: upper-roman !important;
 
-			li::before {
-				list-style-type: upper-roman !important;
-			}
-		}
 
 		.kg-embed-card {
 			margin: 20px auto;
