--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -241,25 +241,22 @@
 		flex-wrap: wrap;
 
 		a {
-			border: 0;
-			padding: 7px 12px;
 			color: #18476e;
 			line-height: 1.5em;
 			display: inline-block;
-			margin: 0 10px 10px 0;
 			font-size: 0.8em !important;
 			-webkit-transition: all 0.2s ease;
 			-moz-transition: all 0.2s ease;
 			-ms-transition: all 0.2s ease;
 			-o-transition: all 0.2s ease;
 			transition: all 0.2s ease;
-			background: #d5e4fc;
 			font-family: 'TTNorms-Regular',sans-serif;
 			flex-grow: 1;
 			text-align: center;
-			.transition(all 0.2s ease);
 			transition: all 0.2s ease;
-			box-shadow: 1px 1px 0 #c8d3e2;
+			margin: 0 8px 8px 0;
+			padding: 7px 12px;
+			border: 1px solid #c9d5e4;
 			@media(max-width: 1000px) {
 				font-size: 0.77em !important;
 				margin: 0 5px 5px 0;
@@ -268,6 +265,7 @@
 			&:hover {
 				cursor: pointer;
 				background: @hover-color;
+				border: 1px solid @hover-color;
 				color: white;
 				box-shadow: 2px 2px 3px 0 #239084;
 			}
