--- a/src/less/posts/linkpreview.less
+++ b/src/less/posts/linkpreview.less
@@ -50,7 +50,7 @@
       height: auto;
       max-height: 200px;
       max-width: 250px;
-      margin-right: 0 30px 0 0;
+      margin: 0;
       background: white;
       border-radius: 2px;
 
