--- a/src/less/posts/postfooter.less
+++ b/src/less/posts/postfooter.less
@@ -9,8 +9,8 @@
 	justify-content: space-between;
 	align-items: center;
 	height: fit-content;
-	padding: 0;
   padding-bottom: 5px;
+	margin-top: 40px;
 
 	@media(max-width: 800px) {
 		display: block;
@@ -33,7 +33,7 @@
 
 		a {
 			background: #e7eefa;
-			color: #8797ae;
+			color: #778aa5;
 			font-size: .8em;
 			margin-right: 15px;
 			transition: all .3s;
@@ -95,7 +95,7 @@
 			a {
 				text-align: center;
 				display: block;
-				padding: 5px 10px 5px 7px !important;
+				padding: 6px 10px 5px 7px !important;
 				width: -webkit-fill-available;
 			}
 
