--- a/src/less/global/variables.less
+++ b/src/less/global/variables.less
@@ -33,4 +33,14 @@
 @github-color: #000;
 @rss-color: #ff6501;
 
+@pandas-color:#7b5195;
+@flask-color:#be90ca;
+@code-color:#47638c;
+@aws-color:#cc9543;
+@mysql-color:#5f6bbd;
+@mongdb-color:#86af96;
+@tableau-color:#d8a918;
+@excel-color: #74a184;
+
+
 @shadow-color: 0 0 5px rgba(65, 67, 144, 0.15);
