--- a/src/less/pages/tag-page.less
+++ b/src/less/pages/tag-page.less
@@ -149,7 +149,7 @@
         }
 
         h2 {
-          color: #4d4a5e;
+          color: #3f4856;
           font-family: 'ProductSans-Regular';
           margin-bottom: 7px;
           margin-top: 0;
