--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -49,7 +49,7 @@
 		font-family: 'ProductSans-Regular';
 		text-transform: uppercase;
 		letter-spacing: 2px;
-		border-bottom: 1px solid rgba(255, 255, 255, .15);
+		border-bottom: 1px solid rgba(226, 255, 253, 0.21);
 		padding-bottom: 10px;
 		@media(max-width: 800px) {
 			margin: 10px 0 10px !important;
@@ -241,7 +241,7 @@
 			font-weight: 200;
 			font-family: 'TTNorms-Bold', serif;
 			transition: all 0.2s ease;
-			border-bottom: 1px dashed rgba(255, 255, 255, 0.23) !important;
+			border-bottom: 1px dashed rgba(255, 255, 255, 0.1) !important;
 			line-height: 1;
 
 			a {
