--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -147,7 +147,7 @@
 			line-height: 1.21;
 			font-weight: 400;
 			text-align: left;
-			font-size: 1.3em;
+			font-size: 1.2em;
 			color: #153b52;
 			font-family: 'ProductSans-Regular', 'TTNorms-Bold',TTNorms-Medium,serif;
 			@media(max-width: 600px) {
@@ -281,8 +281,8 @@
 
 				span {
 					line-height: 1.2;
-					font-size: 12px;
-					font-family: 'TTNorms-Bold','TTNorms-Medium';
+					font-size: 13px;
+					font-family: 'TTNorms-Medium','TTNorms-Medium';
 				}
 
 				i {
