--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -426,6 +426,62 @@
 
 	.series {
 
+		.seriesitem {
+			transition: all .2s ease-out;
+			border-bottom: 1px solid #d5dde8;
+			height: 60px;
+			margin-bottom: 0;
+			padding: 0;
+			overflow: hidden;
+			display: inline-block;
+			align-items: center;
+			display: flex;
+			height: 60px;
+
+			&:last-of-type {
+				border-bottom: 0;
+			}
+
+			&:hover {
+				cursor: pointer;
+				* {
+						color: white;
+						fill: white;
+				}
+
+				&.data-analysis-pandas {
+					background:@pandas-color;
+				}
+
+				&.adventures-in-excel {
+					background:@excel-color;
+				}
+
+				&.building-flask-apps {
+					background:@flask-color;
+				}
+
+				&.code-snippet-corner {
+					background:@code-color;
+				}
+
+				&.create-an-aws-api {
+					background:@aws-color;
+				}
+
+				&.working-with-mysql {
+					background:@mysql-color;
+				}
+				&.mongodb-cloud {
+					background:@mongdb-color;
+				}
+				&.hacking-tableau-server {
+					background:@tableau-color;
+				}
+			}
+
+		}
+
 		.pandas {
 			background:url('https://cdn.hackersandslackers.com/images/11/panda-icon.png');
 		}
@@ -446,18 +502,6 @@
 			background:url('https://cdn.hackersandslackers.com/images/11/api-icon.png')
 		}
 
-		.series-image {
-			width: 50px;
-			min-width: 50px;
-			height: 50px;
-			min-height: 50PX;
-			background-position: center !important;
-			background-size: contain !important;
-			display: block;
-			background-repeat: no-repeat;
-			display: none;
-		}
-
 		.post-title {
 			color: #455f6f;
 			line-height: 1.3;
@@ -471,32 +515,18 @@
 			svg,
 			i {
 				width: 24px;
-				margin-right: 10px;
+				margin-right: 15px;
 			}
 		}
 
-		.building-flask-apps svg {fill: #7b5195}
-		.data-analysis-pandas i {color: #be90ca}
-		.code-snippet-corner svg {fill: #47638c}
-		.create-an-aws-api svg {fill: #cc9543}
-		.working-with-mysql svg {fill: #5f6bbd}
-		.mongodb-cloud svg {fill: #86af96}
-		.hacking-tableau-server i {color: #d8a918}
-
-		.recent-single-post {
-			border-bottom: 1px solid #d5dde8;
-			margin-bottom: 10px;
-			overflow: hidden;
-			display: inline-block;
-			align-items: center;
-			display: flex;
-			padding: 0 0 12px !important;
-			    height: 30px;
-
-			&:last-of-type {
-				border-bottom: 0;
-			}
-		}
+		.building-flask-apps svg {fill: @pandas-color}
+		.data-analysis-pandas i {color: @flask-color}
+		.code-snippet-corner svg {fill: @code-color}
+		.create-an-aws-api svg {fill: @aws-color}
+		.working-with-mysql svg {fill: @mysql-color}
+		.mongodb-cloud svg {fill: @mongdb-color}
+		.hacking-tableau-server i {color: @tableau-color}
+		.adventures-in-excel svg {color: @excel-color}
 
 		.series-image {
 			margin-right: 20px;
@@ -552,7 +582,7 @@
 		line-height: 1.4;
 		font-size: 15px;
 		margin: 0;
-		font-family: 'TTNorms-Bold', sans-serif;
+		font-family: 'TTNorms-Medium', sans-serif;
 		display: inline-block;
 
 		&:hover {
@@ -579,7 +609,7 @@
 		letter-spacing: 1px;
 		margin-top: 0;
 		white-space: nowrap;
-		font-family: 'TTNorms-Bold',serif;
+		font-family: 'TTNorms-Medium',serif;
 		@media(max-width: 1040px) {
 			font-size: 1.3em !important;
 		}
@@ -617,18 +647,18 @@
 		margin-bottom: 15px;
 		text-transform: uppercase;
 		font-size: 1.5em;
-		font-family: 'ProductSans-Medium',TTNorms-Bold,serif;
+		font-family: 'ProductSans-Medium',TTNorms-Medium,serif;
 		color: @header-color;
 		font-weight: 500;
 	}
 
 	.title,
 	.sidebar-title {
-		font-size: 1.25em;
+		font-size: 1.32em;
 		font-weight: 500;
 		margin-bottom: 8px;
 		text-transform: uppercase;
-		font-family: 'TTNorms-Bold',TTNorms-Bold,serif;
+		font-family: 'TTNorms-Medium',TTNorms-Bold,serif;
 		letter-spacing: 2px;
 		color: #1f5373;
 	}
