--- a/partials/mixpanel.hbs
+++ b/partials/mixpanel.hbs
@@ -3,26 +3,42 @@
 for(h=0;h<l.length;h++)c(e,l[h]);var f="set set_once union unset remove delete".split(" ");e.get_group=function(){function a(c){b[c]=function(){call2_args=arguments;call2=[c].concat(Array.prototype.slice.call(call2_args,0));e.push([d,call2])}}for(var b={},d=["get_group"].concat(Array.prototype.slice.call(arguments,0)),c=0;c<f.length;c++)a(f[c]);return b};a._i.push([b,d,g])};a.__SV=1.2;b=c.createElement("script");b.type="text/javascript";b.async=!0;b.src="undefined"!==typeof MIXPANEL_CUSTOM_LIB_URL?
 MIXPANEL_CUSTOM_LIB_URL:"file:"===c.location.protocol&&"//cdn4.mxpnl.com/libs/mixpanel-2-latest.min.js".match(/^\/\//)?"https://cdn4.mxpnl.com/libs/mixpanel-2-latest.min.js":"//cdn4.mxpnl.com/libs/mixpanel-2-latest.min.js";d=c.getElementsByTagName("script")[0];d.parentNode.insertBefore(b,d)}})(document,window.mixpanel||[]);
 mixpanel.init("df373ec075c96a75fd4015e3beff4e59");
+</script>
 
-
-
+<script>
+console.log(mixpanel.get_config);
 
 mixpanel.init("df373ec075c96a75fd4015e3beff4e59", {opt_out_tracking_by_default: false});
     mixpanel.opt_in_tracking;
     mixpanel.track("Page Name");
-    mixpanel.track_links("nav a", "Click nav link", {
+
+</script>
+
+
+{{#is 'home,paged,page'}}
+<script>
+$(document).ready(function() {
+
+    $('.social-btns .btn').each(function(index, element) {
+      $(this).on('click', function(){
+        mixpanel.track_links(this, "visited " + $(this).attr('name'), {
+           "referrer": document.referrer,
+           "visited": $(this).attr('name'),
+       });
+      });
+
+
+    mixpanel.track_links("nav a", "Used Main Nav", {
         "referrer": document.referrer
     });
 
     mixpanel.track_links(".featured-media a", "Clicked 'featured image'", {
-        "referrer": document.referrer
+        "referrer": document.referrer,
+        "module": "postpreview",
+
     });
 
     mixpanel.track_links(".post-permalink a", "Clicked 'read' button", {
-        "referrer": document.referrer
-    });
-
-     mixpanel.track_links(".social-btns .btn ", "visited social media account", {
         "referrer": document.referrer
     });
 
@@ -35,4 +51,5 @@ mixpanel.init("df373ec075c96a75fd4015e3beff4e59", {opt_out_tracking_by_default: 
         "referrer": document.referrer
     });
 
-    </script><!-- end Mixpanel -->
+    </script>
+    <!-- end Mixpanel -->
