--- a/partials/widget-social.hbs
+++ b/partials/widget-social.hbs
@@ -2,13 +2,13 @@
 <div class="widget">
 	<h3 class="title">{{t "Follow"}}</h3>
 	<div class="social-btns">
-		<a class="btn medium" href="https://hackingandslacking.com"><i class="fab fa-medium"></i></a>
-		<a class="btn facebook" href="https://www.facebook.com/hackersandslackers/"><i class="fab fa-facebook-f"></i>
-		<a class="btn twitter" href="https://twitter.com/hackersslackers"><i class="fab fa-twitter"></i></a>
-		<a class="btn tumblr" href="https://hackersandslackers.tumblr.com/"><i class="fab fa-tumblr"></i></a>
-		<a class="btn google" href="https://plus.google.com/communities/106724509785464667119"><i class="fab fa-google"></i></a>
-		<a class="btn github" href="https://github.com/hackersandslackers"><i class="fab fa-github"></i></a>
-		<a class="btn rss" href="{{@blog.url}}/rss/"><i class="fas fa-rss"></i></a>
+		<a class="btn medium" name="medium" href="https://hackingandslacking.com"><i class="fab fa-medium"></i></a>
+		<a class="btn facebook" name="facebook" href="https://www.facebook.com/hackersandslackers/"><i class="fab fa-facebook-f"></i>
+		<a class="btn twitter" name="twitter" href="https://twitter.com/hackersslackers"><i class="fab fa-twitter"></i></a>
+		<a class="btn tumblr" name="tumblr" href="https://hackersandslackers.tumblr.com/"><i class="fab fa-tumblr"></i></a>
+		<a class="btn google" name="google" href="https://plus.google.com/communities/106724509785464667119"><i class="fab fa-google"></i></a>
+		<a class="btn github" name="github" href="https://github.com/hackersandslackers"><i class="fab fa-github"></i></a>
+		<a class="btn rss" name="rss" href="{{@blog.url}}/rss/"><i class="fas fa-rss"></i></a>
 	</div>
 </div>
 <!-- end widget -->
